--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "mosaic",
+  "name": "niko",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [],
@@ -153,6 +153,7 @@
         "scss/bootstrap/utilities/_embed.scss",
         "scss/bootstrap/utilities/_flex.scss",
         "scss/bootstrap/utilities/_float.scss",
+        "scss/bootstrap/utilities/_overflow.scss",
         "scss/bootstrap/utilities/_position.scss",
         "scss/bootstrap/utilities/_screenreaders.scss",
         "scss/bootstrap/utilities/_shadows.scss",
@@ -172,7 +173,8 @@
         "scss/bootstrap/mixins/_grid.scss",
         "scss/bootstrap/_grid.scss",
         "scss/bootstrap/utilities/_display.scss",
-        "scss/bootstrap/utilities/_flex.scss"
+        "scss/bootstrap/utilities/_flex.scss",
+        "scss/bootstrap/utilities/_spacing.scss"
       ]
     },
     {
@@ -246,10 +248,12 @@
         "scss/bootstrap/_media.scss",
         "scss/bootstrap/_list-group.scss",
         "scss/bootstrap/_close.scss",
+        "scss/bootstrap/_toasts.scss",
         "scss/bootstrap/_modal.scss",
         "scss/bootstrap/_tooltip.scss",
         "scss/bootstrap/_popover.scss",
         "scss/bootstrap/_carousel.scss",
+        "scss/bootstrap/_spinners.scss",
         "scss/bootstrap/_utilities.scss",
         "scss/bootstrap/_print.scss",
         "scss/bootstrap/mixins/_breakpoints.scss",
@@ -290,6 +294,7 @@
         "scss/bootstrap/utilities/_embed.scss",
         "scss/bootstrap/utilities/_flex.scss",
         "scss/bootstrap/utilities/_float.scss",
+        "scss/bootstrap/utilities/_overflow.scss",
         "scss/bootstrap/utilities/_position.scss",
         "scss/bootstrap/utilities/_screenreaders.scss",
         "scss/bootstrap/utilities/_shadows.scss",
@@ -301,7 +306,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -342,7 +347,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7972,
+    "port": 7984,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
